--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-@import "./styles/login.css";
+/* local styles ONLY */
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+}
